Modify CharacterCard view in the CLI